# aurelio-sdk

./: .gitignore  .pre-commit-config.yaml  .pydoc-markdown.yml  LICENSE  Makefile  README.md  openapi.json  pyproject.toml
.github/workflows/: docs.yml  lint.yml  release.yml  test.yml
aurelio_sdk/: __init__.py  async_client.py  client.py  client_async.py  const.py  exceptions.py  pyproject.toml  schema.py
aurelio_sdk/logger/: __init__.py
docs/: core-concepts.md  overview.md  quickstart.md
docs/source/: conf.py  index.rst
docs/user-guide/: chunking.md  embeddings.md  file-extraction.md  migration-v0.0.19.md
examples/: 00_chunk_sync.ipynb  00_extract_sync.ipynb  01_chunk_async.ipynb  02_extract.ipynb  03_extract_async.ipynb  04_embeddings.ipynb  aureliosdk-langgraph-pdf-research-agent-example.ipynb  pdf-to-hugging-face-example.ipynb
examples/data/pdf/: test.md
tests/: test_async_client.py  test_client.py
tests/client/: test_chunk.py  test_client.py  test_extract.py
tests/client_async/: test_async_chunk.py  test_async_client.py  test_async_extract.py  test_chunk_async.py
tests/data/: content.txt
