[tool.poetry]
name = "aurelio-sdk"
version = "0.0.16.post1.dev0+aaa53d2"    # Placeholder version; will be replaced by the plugin
description = "Aurelio Platform SDK"
authors = ["Team <hello@aurelio.ai>"]
readme = "README.md"
packages = [{ include = "aurelio_sdk" }]

[project]
name = "aurelio-sdk"
version = "0.0.0"              # Placeholder version; will be replaced by the plugin
license = { file = "LICENSE" }

[tool.poetry.dependencies]
python = "^3.9, <4.0"
aiohttp = "^3.10.11"
requests = "^2.32.3"
pydantic = "^2.9.2"
colorlog = "^6.8.2"
requests-toolbelt = "^1.0.0"
python-dotenv = "^1.0.1"
aiofiles = "^24.1.0"
tornado = ">=6.4.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.7"
types-requests = "^2.32.0.20240914"
datasets = "^3.0.0"
mypy = "^1.11.2"
ipykernel = "^6.29.5"
types-aiofiles = "^24.1.0.20240626"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
pytest-xdist = "^3.6.1"
aioresponses = "^0.7.6"
sphinx = "^7.0.0"
sphinxawesome-theme = "^5.2.0"
pydoc-markdown="^4.8.2"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade,
    "I",  # isort
]
# Never enforce `E501` (line length violations).

ignore = ["E501", "UP007", "UP006", "UP035"]
fixable = ["ALL"]
exclude = ["*.ipynb"]

[tool.ruff]
target-version = "py39"  # TODO: update to 3.13


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"
exclude = ["*.ipynb"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest]
pythonpath = "."

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
pattern = '^v(?P<base>\d+\.\d+\.\d+)$'
metadata = false                       
dirty = false